<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MyMainLayout">

    <ScrollView
        style="@style/MyScrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Name"
                    android:id="@+id/name"
                    android:textSize="@dimen/font_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/colon"
                    android:id="@+id/colon1"
                    android:textSize="@dimen/font_size_medium" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=""
                    android:id="@+id/nameInput"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Gender"
                    android:id="@+id/gender"
                    android:textSize="@dimen/font_size_medium" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/colon"
                    android:id="@+id/colon2"
                    android:textSize="@dimen/font_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=""
                    android:id="@+id/genderInput"
                    android:textSize="@dimen/font_size_medium" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Bio"
                    android:id="@+id/Bio"
                    android:textSize="@dimen/font_size_medium" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/colon"
                    android:id="@+id/colon3"
                    android:textSize="@dimen/font_size_medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=""
                    android:id="@+id/bioInput"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Website"
                    android:id="@+id/web"
                    android:textSize="@dimen/font_size_medium" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/colon"
                    android:id="@+id/colon4"
                    android:textSize="@dimen/font_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=""
                    android:id="@+id/websiteInput"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Address"
                    android:id="@+id/Address"
                    android:textSize="@dimen/font_size_medium" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/colon"
                    android:id="@+id/colon5"
                    android:textSize="@dimen/font_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=""
                    android:id="@+id/addressInput"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Phone"
                    android:id="@+id/Phone"
                    android:textSize="@dimen/font_size_medium" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/colon"
                    android:id="@+id/colon6"
                    android:textSize="@dimen/font_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text=""
                    android:id="@+id/phoneInput"
                    android:textSize="@dimen/font_size_medium" />

            </LinearLayout>

            <Button
                android:text="Edit Profile"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                style="@style/MyMenuRectangleButton"
                android:onClick="buttonEditProfile"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
