<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MyMainLayout">

    <ScrollView
        style="@style/MyScrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="50dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/register_field_height"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Register Patient"
                    android:id="@+id/titleRegisterPatient"
                    android:textSize="@dimen/font_size_medium"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="@dimen/register_field_height"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Username"
                    android:id="@+id/username"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/tbUsername"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="@dimen/register_field_height"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Password"
                    android:id="@+id/password"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/tbPassword"
                    android:layout_weight="0.33"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="@dimen/register_field_height"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Name"
                    android:id="@+id/name"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/tbname"
                    android:layout_weight="0.33"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="@dimen/register_field_height"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Gender"
                    android:id="@+id/gender"
                    android:textSize="@dimen/font_size_medium" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spgender"
                    android:spinnerMode="dropdown" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="@dimen/register_field_height"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Email"
                    android:id="@+id/Email"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tbEmail"
                    android:layout_weight="0.33"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="@dimen/register_field_height"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Bio"
                    android:id="@+id/Bio"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tbBio"
                    android:layout_weight="0.48"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="@dimen/register_field_height"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Website"
                    android:id="@+id/web"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tbWeb"
                    android:layout_weight="1"
                    android:inputType="textWebEmailAddress"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="@dimen/register_field_height"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Address"
                    android:id="@+id/Address"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tbAddress"
                    android:layout_weight="1"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/field_margin">

                <TextView
                    android:layout_width="@dimen/register_field_width"
                    android:layout_height="@dimen/register_field_height"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Phone"
                    android:id="@+id/Phone"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tbPhone"
                    android:layout_weight="1"
                    android:inputType="textPhonetic"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>

            <Button
                android:text="@string/Submit"
                android:id="@+id/button"
                android:layout_gravity="center_horizontal"
                style="@style/MyMenuRectangleButton" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
